<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.mining.mine.SecuritySettingActivity">

    <!--显示表头-->
   <include layout="@layout/layout_head_title"/>

    <!--修改登录密码-->
    <LinearLayout
        android:id="@+id/upadte_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/upadte_pwd"
                android:layout_marginLeft="@dimen/x10"
                android:textColor="@color/white"
                android:textSize="14dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:maxHeight="@dimen/y6"
                android:maxWidth="@dimen/y6"
                android:src="@mipmap/ic_right" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y3"
        android:background="@color/black" />
    <!--实名验证-->
    <LinearLayout
        android:id="@+id/real_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginBottom="@dimen/x2"
            android:text="@string/shiming"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_shiming"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginBottom="@dimen/x2"
            android:layout_gravity="center|right"
            android:textColor="@color/lightSlateGray"
            android:textSize="14dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:maxHeight="@dimen/y6"
            android:maxWidth="@dimen/y6"
            android:src="@mipmap/ic_right" />
    </LinearLayout>
    <!--登录历史-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginBottom="@dimen/x10"
        android:background="@color/black"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/login_history"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>
    <!--列表标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:orientation="horizontal">
        <TextView
            android:layout_margin="@dimen/x10"
            android:layout_marginBottom="@dimen/x5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:layout_marginBottom="@dimen/x5"
            android:text="@string/ip"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:layout_marginBottom="@dimen/x5"
            android:text="@string/address"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:layout_marginBottom="@dimen/x5"
            android:text="@string/emos"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            />
    </LinearLayout>
    <!--上拉刷新-->
    <include layout="@layout/layout_head_loadmore"/>
    <!--适配列表-->
    <ListView
        android:id="@+id/lv_list"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:divider="#A9A9A9"
        android:dividerHeight="1dp">
    </ListView>
</LinearLayout>
