<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.mining.mine.UpdateMobileActivity">

    <!--显示表头-->
    <include layout="@layout/layout_head_title"/>

    <!--原密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:layout_marginBottom="@dimen/x2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/mobile_number"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x20"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:hint="@string/old_mobile"
            android:layout_marginLeft="@dimen/x25"
            android:background="@null"
            android:textColorHint="@color/lightSlateGray"
            android:textColor="@color/lightSlateGray"
            android:textSize="14dp" />
    </LinearLayout>

    <!--新密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:layout_marginBottom="@dimen/x2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mobile_number"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x20"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x25"
            android:background="@null"
            android:textColorHint="@color/lightSlateGray"
            android:textColor="@color/lightSlateGray"
            android:hint="@string/new_mobile"
            android:textSize="14dp" />
    </LinearLayout>

    <!--验证码-->
    <!--输入手机号码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginTop="@dimen/x15"
            android:gravity="left"
            android:text="@string/code"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginLeft="@dimen/x25"
            android:layout_toEndOf="@+id/textView"
            android:background="@null"
            android:gravity="left"
            android:layout_weight="1"
            android:textColorHint="@color/lightSlateGray"
            android:textColor="@color/lightSlateGray"
            android:hint="@string/input_code"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x15"
            android:layout_marginTop="@dimen/x15"
            android:background="@drawable/layout_border_blue_four">
            <TextView
                android:id="@+id/send_massage_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|right"
                android:layout_margin="@dimen/x3"
                android:hint="@string/send_message_code"
                android:textColorHint="@color/c_blue"
                android:textSize="14dp"
                />
        </LinearLayout>
    </LinearLayout>

    <!--确认-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/y35"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:layout_marginLeft="@dimen/x35"
            android:layout_marginRight="@dimen/x35"
            android:background="@drawable/button_style_blue"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>
