<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.mining.mine.SubmitWorkActivity">

    <!--提交工单-->
    <include layout="@layout/layout_head_text"/>

    <!--工单标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:layout_marginBottom="@dimen/x2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/f3"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x20"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:hint="@string/x3"
            android:layout_marginLeft="@dimen/x25"
            android:background="@null"
            android:textColorHint="@color/lightSlateGray"
            android:textColor="@color/lightSlateGray"
            android:textSize="14dp" />
    </LinearLayout>

    <!--联系方式-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:layout_marginBottom="@dimen/x2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/z3"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x20"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x25"
            android:background="@null"
            android:textColorHint="@color/lightSlateGray"
            android:textColor="@color/lightSlateGray"
            android:hint="@string/y3"
            android:textSize="14dp" />
    </LinearLayout>

    <!--反馈内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_b"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x75"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginTop="@dimen/x15"
            android:gravity="left"
            android:text="@string/i3"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x75"
            android:layout_marginLeft="@dimen/x25"
            android:layout_toEndOf="@+id/textView"
            android:background="@null"
            android:gravity="left"
            android:textColorHint="@color/lightSlateGray"
            android:textColor="@color/lightSlateGray"
            android:hint="@string/j3"
            android:textSize="14dp" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x15"
            android:layout_marginTop="@dimen/x15"
            android:background="@drawable/layout_border_white">
            <TextView
                android:id="@+id/send_massage_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|right"
                android:hint="@string/send_message_code"
                android:textColorHint="@color/c_blue"
                android:textSize="14dp"
                />
        </LinearLayout>-->
    </LinearLayout>

    <!--提交-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/y35"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:layout_marginLeft="@dimen/x35"
            android:layout_marginRight="@dimen/x35"
            android:background="@drawable/button_style_blue"
            android:text="@string/l3"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>
